[build-system]
requires = ["setuptools>=61.0", "wheel", "yt-dlp", "pygame"]
build-backend = "setuptools.build_meta"

[project]
name = "superfancyjoketools"
version = "0.1.0"
description = "A collection of super fancy tools for your projects"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "professor@university.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "yt-dlp",
    "pygame",
]

[project.scripts]
superfancyjoketools = "superfancyjoketools:main"

[tool.setuptools.packages.find]
where = ["src"]
