[build-system]
requires = ["setuptools>=61.0", "wheel", "yt-dlp", "pygame-ce"]
build-backend = "setuptools.build_meta"

[project]
name = "superfancyjoketools"
version = "0.1.0"
description = "EDUCATIONAL DEMO: Executes code at install time to demonstrate supply chain security risks by playing a video. DO NOT INSTALL unless you are a student in a controlled lab environment."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "professor@university.edu"}
]
keywords = [
    "security-education",
    "supply-chain-demo",
    "DO-NOT-INSTALL",
    "educational-prank",
    "rickroll",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Private :: Do Not Upload",
]
dependencies = [
    "yt-dlp",
    "pygame-ce",
]

[project.urls]
"Warning" = "https://github.com/yourrepo/superfancyjoketools#warning"

[project.scripts]
superfancyjoketools = "superfancyjoketools:main"

[tool.setuptools.packages.find]
where = ["src"]
