[build-system]
requires = ["setuptools>=61.0", "wheel", "yt-dlp", "pygame-ce"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-attack-poc"
version = "0.1.0"
description = "EDUCATIONAL DEMO: Executes code at install time to play the rickroll video. The purpose is to demonstrate supply chain security risks to students in a memorable way so that they will be careful with what they install in the future."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Mike Izbicki", email = "mike@izbicki.me"}
]
keywords = [
    "DO-NOT-INSTALL",
    "prank",
    "rickroll",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Private :: Do Not Upload",
]
dependencies = [
    "yt-dlp",
    "pygame-ce",
]

[project.urls]
"Warning" = "https://github.com/mikeizbicki/supply-chain-attack-poc"

[project.scripts]
superfancyjoketools = "superfancyjoketools:main"

[tool.setuptools.packages.find]
where = ["src"]
